[gd_scene load_steps=2 format=3 uid="uid://cj6o401qrracu"]

[ext_resource type="Script" path="res://Spawn/spawn_zone.gd" id="1_c5s7t"]

[node name="spawn_zone" type="Node2D"]
position = Vector2(-244, -130)
script = ExtResource("1_c5s7t")
bank_mob = {
"kamikaze": 20,
"police": 20,
"riotman": 40,
"robot": 20
}

[node name="spawn_top" type="ColorRect" parent="."]
offset_left = 1.0
offset_top = -90.0
offset_right = 482.0
offset_bottom = -50.0
color = Color(1, 0.2, 0.2, 0.243137)
metadata/_edit_use_anchors_ = true

[node name="spawn_left" type="ColorRect" parent="."]
offset_left = -143.0
offset_top = -9.0
offset_right = -94.0
offset_bottom = 266.0
color = Color(1, 0.17, 0.17, 0.282353)
metadata/_edit_use_anchors_ = true

[node name="spawn_right" type="ColorRect" parent="."]
offset_left = 555.0
offset_top = -8.0
offset_right = 608.0
offset_bottom = 274.0
color = Color(1, 0.06, 0.06, 0.2)
metadata/_edit_use_anchors_ = true

[node name="spawn_bottom" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = 322.0
offset_right = 494.0
offset_bottom = 373.0
color = Color(1, 0.12, 0.12, 0.298039)
metadata/_edit_use_anchors_ = true

[node name="Timer_spawn" type="Timer" parent="."]
autostart = true

[node name="Timer_state" type="Timer" parent="."]
autostart = true
